--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/swiper.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,7 +21,7 @@
     <title>チームA｜トップページ</title>
   </head>
   <body>
-    <header class="l-header p-header">
+    <header class="p-header">
       <div class="p-header__inner">
         <a href="">チームA</a>
         <button class="p-header__inner__toggle-menu-button"></button>
@@ -36,7 +35,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="l-main">
       <article>
         <section class="p-swiper">
           <div class="p-swiper__container">
@@ -85,9 +84,9 @@
         <section class="p-intro">
           <ul>
             <li><img src="./img/2022-08-31.png" alt=""><p>たこみーと</p></li>
-            <li><img src="" alt=""><p>ゆうな</p></li>
+            <li><img src="./img/2022-08-31.png" alt=""><p>ゆうな</p></li>
             <li><img src="./img/2022-08-31 (1).png" alt=""><p>せいや</p></li>
-            <li><img src="" alt=""><p>ゆりえ</p></li>
+            <li><img src="./img/2022-08-31(2).jpg" alt=""><p>ゆりえ</p></li>
           </ul>
         </section>
       </article>
