--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <header class="p-header">
       <div class="p-header__inner">
         <a href="">チームA</a>
-        <button class="p-header__inner__toggle-menu-button"></button>
+        <button class="p-header__inner__toggle-menu-button">
+          <span></span>
+        </button>
         <div class="p-header__inner__site-menu">
           <nav>
             <ul>
