トップページ完了

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js" defer></script>
-    <script src="swiper.js" defer></script>
+    <script src="./scripts/main.js" defer></script>
+    <script src="./scripts/swiper.js" defer></script>
     <title>チームA｜トップページ</title>
   </head>
   <body>
@@ -86,7 +87,7 @@
         <section class="p-intro">
           <ul>
             <li><img src="./img/2022-08-31.png" alt=""><p>たこみーと</p></li>
-            <li><img src="./img/2022-08-31.png" alt=""><p>ゆうな</p></li>
+            <li><img src="./img/2022-08-31(3).jpg" alt=""><p>ゆうな</p></li>
             <li><img src="./img/2022-08-31 (1).png" alt=""><p>せいや</p></li>
             <li><img src="./img/2022-08-31(2).jpg" alt=""><p>ゆりえ</p></li>
           </ul>
